unpackaged/main/default/objects/SalesArea__c/SalesArea__c.object-meta.xml
<CustomObject>
    <label>Organisation Commerciale</label>
    <nameField>
        <label>Nom de l&#39;Organisation Commerciale</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Organisations Commerciales</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>