unpackaged/main/default/objects/SalesArea__c/fields/BusinessLine__c.field-meta.xml
<CustomField>
    <fullName>BusinessLine__c</fullName>
    <label>Ligne de produit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>BusinessLine</valueSetName>
    </valueSet>
</CustomField>