unpackaged/main/default/objects/SalesArea__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <label>Pays</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Liste_Pays</valueSetName>
    </valueSet>
</CustomField>