unpackaged/main/default/objects/SalesArea__c/fields/LegalEntity__c.field-meta.xml
<CustomField>
    <fullName>LegalEntity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Entité Légale</label>
    <referenceTo>LegalEntity__c</referenceTo>
    <relationshipName>SalesArea</relationshipName>
    <type>Lookup</type>
</CustomField>