unpackaged/main/default/objects/SalesArea__c/fields/LogoBrand__c.field-meta.xml
<CustomField>
    <fullName>LogoBrand__c</fullName>
    <formula>CASE(TEXT(Brand__c ),
&#39;Petit Forestier&#39;, IMAGE($Setup.CompanyPicture__c.LogoPetitForestier__c , &#39;Petit Forestier&#39;, 30, 50),
&#39;Stricher Froid&#39;,IMAGE($Setup.CompanyPicture__c.LogoStricherFroid__c , &#39;Stricher&#39;, 30, 50),
&#39;Zefirent&#39;,IMAGE($Setup.CompanyPicture__c.Zefirent_Logo__c , &#39;Zefirent&#39;, 30, 50),
&#39;Mendon Truck Leasing&#39;,IMAGE($Setup.CompanyPicture__c.Mendon_Logo__c , &#39;Mendon&#39;, 30, 50),
&#39;Medfood&#39;, IMAGE($Setup.CompanyPicture__c.LogoPetitForestier__c , &#39;Petit Forestier&#39;, 30, 50),
&#39;NOLEGGIO&#39;, IMAGE($Setup.CompanyPicture__c.SVNoleggio_Logo__c, &#39;SV Noleggio&#39;, 40, 60),
&#39;Reways&#39;, IMAGE($Setup.CompanyPicture__c.Logo_Reways__c, &#39;Reways&#39;, 40, 60),
					&#39;&#39;
)</formula>
    <label>Logo Marque</label>
    <type>Text</type>
</CustomField>