unpackaged/main/default/objects/SalesArea__c/fields/LogoBusinessLine__c.field-meta.xml
<CustomField>
    <fullName>LogoBusinessLine__c</fullName>
    <formula>CASE(BusinessLine__c, 
&#39;Véhicules frigorifiques&#39;, IMAGE($Setup.CompanyPicture__c.BusinessLineVehicle__c  , &quot;Véhicules frigorifiques&quot;,50,75),
&#39;Meubles&#39;, IMAGE($Setup.CompanyPicture__c.BusinessLineMeuble__c ,&quot;Meubles&quot;,50,75),
&#39;Containers&#39;, IMAGE($Setup.CompanyPicture__c.BusinessLineContainers__c ,&quot;Containers&quot;, 50,75),
&#39;Véhicules secs&#39;, IMAGE($Setup.CompanyPicture__c.BusinessLineDryVehicles__c ,&quot;Véhicules secs&quot;, 50,75), 
&#39;Vente&#39;,IMAGE($Setup.CompanyPicture__c.BusinessLine_Cession__c,&quot;Cession&quot;,50,75),
&#39;&#39;)</formula>
    <label>Logo Ligne de produit</label>
    <type>Text</type>
</CustomField>