unpackaged/main/default/objects/SalesArea__c/fields/Org_generique__c.field-meta.xml
<CustomField>
    <fullName>Org_generique__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Org générique</label>
    <type>Checkbox</type>
</CustomField>