unpackaged/main/default/objects/SalesArea__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>LegalEntity__c</columns>
    <columns>LogoBrand__c</columns>
    <columns>Brand__c</columns>
    <columns>LogoBusinessLine__c</columns>
    <columns>BusinessLine__c</columns>
    <columns>Country__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>