unpackaged/main/default/objects/SalesArea__c/listViews/Reways.listView-meta.xml
<ListView>
    <fullName>Reways</fullName>
    <columns>NAME</columns>
    <columns>LegalEntity__c</columns>
    <columns>LogoBrand__c</columns>
    <columns>Brand__c</columns>
    <columns>LogoBusinessLine__c</columns>
    <columns>BusinessLine__c</columns>
    <columns>Country__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CURRENCY_ISO_CODE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Brand__c</field>
        <operation>contains</operation>
        <value>Reways</value>
    </filters>
    <label>Reways</label>
</ListView>